[project]
name = "judo-record-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.3",
    "psycopg2-binary>=2.9.11",
]

[dependency-groups]
dev = [
    "django-stubs>=5.2.9",
    "django-stubs-ext>=5.2.9",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]
